--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.harlow.gov.uk" class="govuk-link">Harlow District Council</a></li>
-      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
-      <li><a href="http://www.barnet.gov.uk/" class="govuk-link">London Borough of Barnet Council</a></li>
-      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
-      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
+      <li><a href="http://www.eden.gov.uk/" class="govuk-link">Eden District Council</a></li>
       <li><a href="http://findyourmp.parliament.uk/" class="govuk-link">Find your MP - UK Parliament</a></li>
       <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
-      <li><a href="http://www.boroughofpoole.com" class="govuk-link">Borough of Poole Council</a></li>
-      <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
-      <li><a href="http://www.bradford.gov.uk" class="govuk-link">City of Bradford Metropolitan District Council</a></li>
+      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
+      <li><a href="http://www.suffolkcc.gov.uk" class="govuk-link">Suffolk County Council</a></li>
+      <li><a href="http://www.burnley.gov.uk/" class="govuk-link">Burnley Borough Council</a></li>
+      <li><a href="https://census.gov.uk/" class="govuk-link">Census 2021</a></li>
+      <li><a href="http://www.preston.gov.uk" class="govuk-link">Preston City Council</a></li>
+      <li><a href="http://www.northdown.gov.uk" class="govuk-link">North Down Borough Council</a></li>
+      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
