--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/stay-in-touch-with-us-through-social-media--2">Stay in touch with us through social media</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/ukrwanda-cycling-a-formula-for-success--2">UK/Rwanda cycling – a formula for success</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/high-commissioners-blog">High Commissioner’s Blog</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-prince-of-wales-and-the-duchess-of-cornwall-to-visit-saudi-arabia">The Prince of Wales and The Duchess of Cornwall to visit Saudi Arabia </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/celebrating-three-great-english-exports-in-2015--6">Celebrating three GREAT English exports in 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/five-fold-increase-of-chevening-scholarship-awards-to-zimbabwe--2">Five Fold Increase of Chevening Scholarship Awards to Zimbabwe</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/queens-birthday-party-held-in-yerevan">Queen&rsquo;s Birthday Party held in Yerevan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/world-day-against-the-death-penalty">World Day Against the Death Penalty</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/207015.pt">Campanha GREAT apresenta evento sobre Engenharia Automobilistica</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/283719.es-419">Fiscal de la Nación recibió al Crown Prosecution Service</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/statement-from-the-british-ambassador-to-bahrain--2">Statement from the British Ambassador to Bahrain</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233503.es">El Consulado de Palma de Mallorca cerrado temporalmente</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263388.zh-tw">2014 台灣歐盟司法交流計畫即將在下週舉行</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--2">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/206678.es-419">Arranca la GREAT week en México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/digital-diplomacy">Digital Diplomacy</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/change-of-her-majestys-ambassador-to-portugal">Her Majesty’s Ambassador to Portugal</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
