--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
-<li><a href="https://www.gov.ukhttp//www.preston.gov.uk">Preston City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bournemouth.gov.uk">Bournemouth Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.carrickfergus.org">Carrickfergus Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.southbucks.gov.uk">South Bucks District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.huntsdc.gov.uk">Huntingdonshire District Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.pointsoflight.gov.uk/">Points of Light</a></li>
+<li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hinckleyandbosworthonline.org.uk">Hinckley and Bosworth Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//census.gov.uk/">Census 2021</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
+<li><a href="https://www.gov.ukhttp//www.carmarthenshire.gov.uk">Carmarthenshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.harlow.gov.uk">Harlow District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.watford.gov.uk/">Watford Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
