--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/237972.es">José Ignacio Sánchez Galán, Presidente de Iberdrola,  miembro de la Orden del Imperio Británico</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--10">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/top-tips-for-uk-student-visa-applicants--5">Top tips for UK student visa applicants</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262678.pt">Equipes britânicas de remo estão no Rio de Janeiro</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/289218.es-419">Llegará a México la mayor delegación Británica del sector turismo en la historia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/257525.ar">قام سفير صاحبة الجلالة البريطانية بإلقاء كلمة أمام خادم الحرمين الشريفين الملك عبد الله خلال حفل تقديم أوراق اعتماد السفراء الذي تم عقده في جدة</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/st-davids-day-declaracion-ministro-principal-de-gales">St. Davids Day: Declaración Ministro Principal de Gales</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-uk-supports-the-kosovo-security-force-with-medical-training--2">The UK Supports the Kosovo Security Force with Medical Training</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/office-closure--3">Office Closure</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/ukuzbekistan-bilateral-relations--2">UK/Uzbekistan Bilateral Relations</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/celebrating-the-life-and-legacy-of-shakespeare-in-2016--2">Celebrating the life and legacy of Shakespeare in 2016</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/ukrwanda-cycling-a-formula-for-success--2">UK/Rwanda cycling – a formula for success</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/taipei-office-closures--3">Taipei office closures</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/275931.es">Un día en la vida de Simon Manley</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/213614.es-419">Embajador Benjamin designado Alto Comisionado en Ghana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/272653.es-419">México recuerda el Día Internacional de la Eliminación de la Violencia contra la Mujer</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/231029.es">Empresa y Derechos Humanos: Agenda Pública y Privada</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/tci-post-cabinet-statement--2">Turks and Caicos Islands post Cabinet statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263630.pt">Dia Mundial contra a Pena de Morte - Declaração Conjunta</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
