--- a/apps/collections/campaign-pages.html
+++ b/apps/collections/campaign-pages.html
@@ -364,14 +364,14 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/collections/commit/1358bd33db19b188d5e91ab47a54369f25e78eb8">6 May 2021</a>
+  Last updated: <a href="https://github.com/alphagov/collections/commit/168453fcb45564f466fab3914bd90f83cc7816f7">27 May 2021</a>
 </div>
 
   <h1 class="page-title">collections: Campaign pages</h1>
 
   
 <p>Collections currently renders the following campaign pages:</p>
-<h2 id="transition-landing-page-transition">Transition landing page (<a href="https://www.gov.uk/transition">/transition</a>)</h2>
+<h2 id="brexit-landing-page-brexit">Brexit landing page (<a href="https://www.gov.uk/brexit">/brexit</a>)</h2>
 <p>All content for the transition landing pages are currently read from yaml files. <a href="https://github.com/alphagov/collections/blob/main/docs/config/locales/cy/transition_landing_page.yml">Welsh</a> and <a href="https://github.com/alphagov/collections/blob/main/docs/config/locales/en/transition_landing_page.yml">English</a> translations are available.</p>
 <h2 id="dit-landing-page-eubusiness">DIT landing page (<a href="https://www.gov.uk/eubusiness">/eubusiness</a>)</h2>
 <p>All content for the DIT landing pages are currently read from yaml files e.g. for <a href="https://github.com/alphagov/collections/blob/main/docs/config/locales/en/dit_landing_page.yml">English</a>. See the <a href="https://www.gov.uk/api/content/eubusiness">content item's available translations</a> for the current list.</p>
