--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
-      <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
-      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
-      <li><a href="http://www.southbucks.gov.uk" class="govuk-link">South Bucks District Council</a></li>
       <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
       <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
-      <li><a href="http://www.oldham.gov.uk/" class="govuk-link">Oldham Metropolitan Borough Council</a></li>
-      <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
+      <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
       <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
+      <li><a href="http://www.warwickshire.gov.uk/" class="govuk-link">Warwickshire County Council</a></li>
+      <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
       <li><a href="http://www.plymouth.gov.uk" class="govuk-link">Plymouth City Council</a></li>
+      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
+      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
+      <li><a href="http://www.oxfordshire.gov.uk/" class="govuk-link">Oxfordshire County Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
